# selfupdate

./: .campaign_env.sh.example  .gitignore  .venv  AGENTS.md  EXPERIMENTS.md  FableReviewBy55xh.md  FableReviewConversationOutput.txt  README.md  TOKEN_REPORT.md  issues.md  pyproject.toml  recommendations.md  requirements-cu128.txt  requirements-optional.txt
certs/: README.md  examples_subset16.jsonl
compressed/: MANIFEST.csv  MANIFEST.shell.md  MEASUREMENTS.md  README.md  _generate_compressed.py  _selfupdate_bundle.sha256  _shared_bundle.py  attention_probe.py  audit_configs.py  base_general.py  benchmark_ppn_transport.py  benchmark_vllm_generation.py  build_coverage_queue.py  build_dataset.py  build_deciepoch_subset.py  build_teacher_cache.py  cache_generation_gate.py  cache_null_probe.py  chain_ppp8_when_ready.sh  compare_lora_checkpoints.py  compare_v4_shard_numerics.py  conclusion_check.py  convert_deepseek_native_to_hf.py  convert_responses_tokenizer.py  cpu_watch.sh  delta_profiles.py  demo_35b_answers.sh  demo_deepseek_bf16.sh  demo_deepseek_retry.sh  dequantize_snapshot.py  destruct_eval.py  download_mlt2.sh  evaluate.py  evaluate_v31_4b_full_standard.sh  fetch_quijote.py  forget_curves.py  frontier_recall.py  fuse_experts_snapshot.py  gen_pareto_v2_screen.py  gpu_health.sh  (+90 more)
compression_analysis/: README.md  REPORT.md  audit_compression.py  compression_audit.csv
configs/: base.yaml
containers/: selfupdate-cu128.def
data/: anchors_es.txt  anchors_es_v2.txt  intrusion_prompts_es.txt
defactorised/: MANIFEST.shell.txt  README.md  README.shell.md  (+122 more)
(+1484 files in other folders)
